<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sudoku and tight dresses</string>
    <string name="nav_bar_gallery">Pictures gallery</string>
    <string name="nav_bar_home">Home</string>
    <string name="nav_bar_more">More</string>
    <string name="dialog_new_game">Game in progress</string>
    <string name="dialog_new_game_text">You have an unfinished game, do you really want to start a new one?</string>
    <string name="dialog_new_game_positive">Start new</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_play">Play</string>
    <string name="action_continue">Continue</string>
    <string name="action_delete">Delete</string>
    <string name="difficulty_unspecified">Unspecified</string>
    <string name="difficulty_simple">Simple</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_moderate">Moderate</string>
...
    <string name="difficulty_challenge">Challenge</string>
    <string name="difficulty_custom">Custom</string>
    <string name="type_default_6x6">6x6</string>
    <string name="type_default_9x9">9x9</string>
    <string name="type_default_12x12">12x12</string>
    <string name="type_unspecified">Unspecified</string>
    <string name="settings_title">Settings</string>
    <string name="about_title">About</string>
    <string name="pref_appearance">Appearance</string>
    <string name="pref_dark_theme">Dark theme</string>
    <string name="pref_dark_theme_follow">Follow system</string>
    <string name="pref_dark_theme_off">Off</string>
    <string name="pref_dark_theme_on">On</string>
    <string name="pref_board_font_size">Board font size</string>
...
    <string name="pref_tipcards_reset">Tip cards was reset!</string>
    <string name="pref_app_language">App language</string>
    <string name="label_default">Default</string>
    <string name="about_version">Version</string>
    <string name="about_github_project">Project on GitHub</string>
    <string name="action_give_up">Give up</string>
    <string name="action_reset_game">Reset the game</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="action_show_notes">Show notes</string>
    <string name="action_clear_notes">Clear notes</string>
    <string name="action_compute_notes">Compute notes</string>
    <string name="action_show_solution">Show solution</string>
    <string name="action_show_mine_sudoku">Show mine</string>
    <string name="onboard_title">Welcome</string>
...
    <string name="mistakes_number_out_of">Mistakes %1$d/%2$d</string>
    <string name="reset_game_text">Want to reset the current puzzle?</string>
    <string name="give_up_text">Do you want to give up? If you give up, you will be able to see the final solution</string>
    <string name="game_completed">Game completed, new image added to the gallery</string>
    <string name="dialog_generating">Generating…</string>
    <string name="dialog_solving">Solving…</string>
    <string name="statistics">Statistics</string>
    <string name="games_started">Games started</string>
    <string name="games_completed">Games completed</string>
    <string name="win_rate">Win rate</string>
    <string name="win_streak">Win streak</string>
    <string name="current_streak">Current streak</string>
    <string name="best_streak">Best streak</string>
...
    <string name="saved_game_type">Type: %1$s</string>
    <string name="saved_game_time">Time: %1$s</string>
    <string name="saved_game_completed">The game was completed</string>
    <string name="saved_game_give_up">You gave up</string>
    <string name="saved_game_in_progress">In progress</string>
    <string name="saved_game_mistakes_limit">Mistakes limit exceeded</string>
    <string name="learn_screen_title">Learn</string>
    <string name="learn_tab_sudoku">Sudoku</string>
    <string name="learn_tab_app">App</string>
    <string name="learn_app_toolbar">Toolbar</string>
    <string name="learn_app_toolbar_desc">A panel under the keyboard</string>
    <string name="learn_app_toolbar_notes_menu">You can press and hold the Notes button to open the Notes menu, where you can clear or compute notes and toggle their visibility</string>
    <string name="learn_sudoku_rules">Sudoku rules</string>
...
    <string name="sort_ascending">Ascending</string>
    <string name="sort_descending">Descending</string>
    <string name="sort_by_timer">Timer</string>
    <string name="sort_by_game_id">ID</string>
    <string name="sort_label">Sort</string>
    <string name="filter_label">Filter</string>
    <string name="title_folders">Folders</string>
    <string name="create_folder">Create a folder</string>
    <string name="delete_folder">Delete a folder</string>
    <string name="folder_name">Folder: %1$s</string>
    <plurals name="number_puzzles_to_import">
        <item quantity="one">%1$d puzzle to import</item>
        <item quantity="two">%1$d puzzles to import</item>
...
    <string name="pref_date_format_custom_summ">Enter date pattern according to Java DateTimeFormatter</string>
    <string name="pref_date_format_custom_textfield_label">Pattern</string>
    <string name="pref_date_format_custom_label">Custom</string>
    <string name="theme_blue">Blue</string>
    <string name="redo">Redo</string>
    <string name="uncovered_images">Uncovered pictures</string>
    <string name="more_games_like_this">More games like this</string>
</resources>
