...
    actions: GameTopBarActions,
    navigateBack: () -> Unit,
) {
    TopAppBar(
        title = { },
        navigationIcon = {
            IconButton(onClick = navigateBack, modifier = Modifier.testTag("game_back")) {
                Icon(
                    painter = painterResource(R.drawable.ic_round_arrow_back_24),
                    contentDescription = null,
                )
            }
        },
...
    prefs: GameBoardPrefs,
    renderNotes: Boolean,
) {
    Board(
        modifier =
            Modifier
                .testTag("sudoku_board")
                .blur(prefs.boardBlur)
                .scale(prefs.scale, prefs.scale),
        data =
            BoardData(
                board = if (!boardState.showSolution) boardState.gameBoard else boardState.solvedBoard,
                size = boardState.size,
...
