...
    restartButtonAnimation: Float,
    onRestartClick: () -> Unit,
) {
    AnimatedVisibility(visible = visible) {
        IconButton(
            onClick = onRestartClick,
            modifier = Modifier.testTag("game_restart"),
        ) {
            Icon(
                modifier = Modifier.rotate(restartButtonAnimation),
                painter = painterResource(R.drawable.ic_round_replay_24),
                contentDescription = null,
            )
...
