...
        UndoRedoMenu(
            expanded = state.showUndoRedoMenu,
            onDismiss = actions.onDismissUndoRedoMenu,
            onRedoClick = actions.onRedoClick,
        )
        ToolbarItem(
            modifier = Modifier.testTag("game_undo"),
            painter = painterResource(R.drawable.ic_round_undo_24),
            onClick = actions.onUndoClick,
            onLongClick = actions.onShowUndoRedoMenu,
        )
    }
}
...
